# sundials-feedstock

./: .appveyor.yml  .recipe_maintainers.json  .travis.yml  README.md  appveyor.yml  conda-forge.yml
.azure-pipelines/: azure-pipelines-win.yml
.ci_support/: linux_.yaml  linux_64_.yaml  linux_aarch64_.yaml  linux_c_compilergcccxx_compilergxx.yaml  linux_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml  linux_ppc64le_.yaml  linux_python2.7.yaml  linux_python3.5.yaml  linux_python3.6.yaml  osx_.yaml  osx_64_.yaml  osx_arm64_.yaml  osx_c_compilerclangcxx_compilerclangxx.yaml  osx_c_compilertoolchain_ccxx_compilertoolchain_cxx.yaml  osx_python2.7.yaml  osx_python3.5.yaml  osx_python3.6.yaml  win_.yaml  win_64_.yaml  win_c_compilervs2008cxx_compilervs2008python2.7vc9.yaml  win_c_compilervs2008cxx_compilervs2008vc9.yaml  win_c_compilervs2015cxx_compilervs2015python3.5vc14.yaml  win_c_compilervs2015cxx_compilervs2015python3.6vc14.yaml  win_c_compilervs2015cxx_compilervs2015vc14.yaml
.github/: CODEOWNERS
.scripts/: build_steps.sh  run_osx_build.sh
recipe/: CMakeLists.txt  bindir.patch  bld-sundials.bat  bld.bat  build-sundials.sh  build.sh  conda_build_config.yaml  fix-win-static-and-shared.patch  meta.yaml  recipe.yaml  run_test.bat  run_test.sh  soversion.patch  sundials-link-libs.patch  superlumt.patch
